--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 				this.load.image('sky', 'https://labs.phaser.io/assets/skies/space2.png ');
 				this.load.image('atari', 'https://labs.phaser.io/assets/sprites/atari800xl.png');
 			}
+
+			let atari; // ajouts d'une variable pour manipuler l'image plus tard
+			function create() {
+			  this.add.image(400, 300, 'sky');
+			  atari = this.add.image(400, 300, 'atari');
+			}
 		</script>
 	</body>
 </html>
