--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 			function create() {
 			  this.add.image(400, 300, 'sky');
 			  atari = this.add.image(400, 300, 'atari');
+
+			  // on ajoute un petite animation 
+			  this.tweens.add({
+			  	targets: atari,
+			  	y: 270,
+			  	duration: 3000,
+			  	ease: 'Power2',
+			  	repeat: -1,
+			  	yoyo: true
+			  })
 			}
 		</script>
 	</body>
